@@ -31,10 +31,10 @@ object Thy_Header extends Parse.Parser
       Header(f(name), imports.map(f), uses.map(f))
   }
 
-  val make_xml_data: XML_Data.Make.T[Header] =
+  val encode_xml_data: XML_Data.Encode.T[Header] =
   {
     case Header(name, imports, uses) =>
-      import XML_Data.Make._
+      import XML_Data.Encode._
       triple(string, list(string), list(string))(name, imports, uses)
   }
 
